# zed-rmate-server

./: Cargo.toml
src/: main.rs  protocol.rs  server.rs
