[package]
name = "zed-rmate-server"
version = "0.4.2"
authors = ["Christian W. Zuckschwerdt <christian@zuckschwerdt.org>"]
edition = "2021"

[dependencies]
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
dotenvy = "0.15"
clap = { version = "4.5", features = ["derive", "env", "suggestions", "color", "wrap_help"] }

futures = "0.3.31"
tokio = { version = "1.43", features = ["macros", "rt-multi-thread", "fs", "net", "io-util", "sync", "time"] }

tempfile = "3.14"
notify = { version = "8", default-features = false, features = ["macos_fsevent"] }
async-process = "2.3"
